--- a/README.org
+++ b/README.org
@@ -50,6 +50,12 @@ its content.
 
 ** Julio 2023
 
+*** 26-Jul-23
++ [[https://lawrencecpaulson.github.io/2023/07/26/Wang.html][Hao Wang on the formalisation of mathematics]]. ~ Lawrence C. Paulson (@LawrPaulson). #Logic #Math #ATP
++ [[https://lawrencecpaulson.github.io/papers/Early-History-of-ATP.pdf][The early history of automated deduction]]. ~ Martin Davis. #Logic #Math #ATP
++ [[https://whileydave.com/2023/07/17/proving-a-beautiful-identity-in-dafny/][Proving a beautiful identity in Dafny]]. ~ David J. Pearce (@whileydave) #ITP #Dafny #Math
++ [[https://youtu.be/Sadj217TA1Y][Prompt engineering for software developers]]. ~ David Farago. #LLMs #Programming
+
 *** 25-Jul-23
 + [[https://arxiv.org/abs/2307.12224][Calculational proofs in ACL2s]]. ~ Andrew T. Walter, Ankit Kumar, Panagiotis Manolios. #ITP #ACL2 #Logic
 + [[https://www.proquest.com/openview/78dfe9e41f0f293c2e928713153c591e][Productivity tools for solver-aided programming]]. ~ Sorawee Porncharoenwase. #ITP #LeanProver.
