--- a/README.org
+++ b/README.org
@@ -51,6 +51,9 @@ its content.
 
 ** Agosto 2023
 
+*** 03-Ago-23
++ [[https://arxiv.org/abs/2307.16648][LLMs4OL: Large language models for ontology learning]]. ~ Hamed Babaei Giglou, Jennifer D'Souza, Sören Auer. #LLMs #KRR
+
 *** 02-Ago-23
 + [[https://arxiv.org/abs/2307.02477][Reasoning or reciting? Exploring the capabilities and limitations of language models through counterfactual tasks]]. ~ Zhaofeng Wu et als. #LLMs #GPT
 + [[https://arxiv.org/abs/2308.00245][The hitchhiker's guide to program analysis: A journey with large language models]]. ~ Haonan Li, Yu Hao, Yizhuo Zhai, Zhiyun Qian. #LLMs #Programming
