--- a/README.org
+++ b/README.org
@@ -51,6 +51,11 @@ its content.
 
 ** Agosto 2023
 
+*** 09-Ago-23
++ [[https://lawrencecpaulson.github.io/2023/08/09/computer_proof.html][When is a computer proof a proof? ~ Lawrence C]]. Paulson (@LawrPaulson). #ITP #Logic #Math
++ [[https://www.degruyter.com/document/doi/10.1515/krt-2022-0015/html][Philosophical assumptions behind the rejection of computer-based proofs]]. ~ Katia Parshina. #Math #CompSci
++ [[https://arxiv.org/abs/2308.04161][Current and future challenges in knowledge representation and reasoning]]. ~ James P. Delgrande, Birte Glimm, Thomas Meyer, Miroslaw Truszczynski, Frank Wolter. #KRR
+
 *** 08-Ago-23
 + [[https://publikationen.bibliothek.kit.edu/1000161074/151088087][An extensible theorem proving frontend]]. ~ Sebastian Andreas Ullrich. #ITP #LeanProver
 + [[https://scholarworks.umass.edu/cgi/viewcontent.cgi?article=3936&context=dissertations_2][Automating the formal verification of software]]. ~ Emily First. #ITP #Coq
