--- a/README.org
+++ b/README.org
@@ -51,6 +51,13 @@ its content.
 
 ** Agosto 2023
 
+*** 10-Ago-23
++ [[https://djvelleman.github.io/HTPIwL/][How to prove it with Lean]]. ~ Daniel J. Velleman. #ITP #Lean4 #Logic #Math
++ [[https://camilocs.substack.com/p/entrevista-a-alfred-aho-acm-turing][Entrevista a Alfred Aho (ACM Turing Award)]]. ~ Camilo Chacón Sartori (@camilo_chacon_s). #CompSci
++ [[https://arxiv.org/abs/2308.04445][Getting from generative AI to trustworthy AI: What LLMs might learn from Cyc]]. ~ Doug Lenat, Gary Marcus. #GenerativeAI #AI #LLMs #Cyc
++ [[https://www.preprints.org/manuscript/202308.0148/v2][GPT-4 can't reason]]. ~ Konstantine Arkoudas. #GPT4 #LLMs #AI #Reasoning
++ [[https://arxiv.org/abs/2308.04477][A comparative study of code generation using ChatGPT 3.5 across 10 programming languages]]. ~ Alessio Buscemi. #ChatGPT #Programming
+
 *** 09-Ago-23
 + [[https://lawrencecpaulson.github.io/2023/08/09/computer_proof.html][When is a computer proof a proof? ~ Lawrence C]]. Paulson (@LawrPaulson). #ITP #Logic #Math
 + [[https://www.degruyter.com/document/doi/10.1515/krt-2022-0015/html][Philosophical assumptions behind the rejection of computer-based proofs]]. ~ Katia Parshina. #Math #CompSci
